core/codegen/tests/ui-fail-stable/from_form_value.stderr
error: tuple structs are not supported
 --> $DIR/from_form_value.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^

error: [note] error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:3:10
  |
3 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
 --> $DIR/from_form_value.rs:7:1
  |
7 | struct Foo2(usize);
  | ^^^^^^

error: [note] error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:6:10
  |
6 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> $DIR/from_form_value.rs:10:1
   |
10 | struct Foo3 {
   | ^^^^^^

error: [note] error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:9:10
  |
9 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: variants cannot have fields
  --> $DIR/from_form_value.rs:16:7
   |
16 |     A(usize),
   |       ^^^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:14:10
   |
14 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum must have at least one field
  --> $DIR/from_form_value.rs:20:11
   |
20 | enum Foo5 { }
   |           ^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:19:10
   |
19 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type generics are not supported
  --> $DIR/from_form_value.rs:23:11
   |
23 | enum Foo6<T> {
   |           ^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:22:10
   |
22 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> $DIR/from_form_value.rs:29:20
   |
29 |     #[form(value = 123)]
   |                    ^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:27:10
   |
27 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal or key/value pair
  --> $DIR/from_form_value.rs:35:12
   |
35 |     #[form(value)]
   |            ^^^^^

error: [note] error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:33:10
   |
33 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
